# EC463_Team_21_Grocery_Robot

./: README.md
ESP32/ultrasonic/: ultrasonic.ino
ESP32/ultrasonic/servo-component-testing/: servo_lift_test.ino  servo_repeatability.ino
Nav/: README_SLAM.md
Nav/carto_cfg/: my_carto.launch.py  pico_2d.lua
workspace/: .gitignore
workspace/src/mvp_interfaces/: package.xml  setup.cfg  setup.py
workspace/src/mvp_robot/: CMakeLists.txt  package.xml  setup.cfg  setup.py
workspace/src/mvp_robot/launch/: README.md  product_query_mock.py  sample.py
workspace/src/mvp_robot/mvp_robot/: arm_motor.py  camera_vision.py  central.py  distance_sensor.py  ir_sensor.py  lidar.py  navigation.py  product_db_query.py  ui_input.py  wheel_motor.py
workspace/src/mvp_robot/srv/: ProductInfo.srv
workspace/src/mvp_robot_msgs/: CMakeLists.txt  package.xml
workspace/src/mvp_robot_msgs/srv/: ProductRequest.srv
yolo/: check_realsense_connection.py  check_usb_type.py  realsense_barcode.py  realsense_yolo.py
